sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:41: error: i is already defined as variable i
  var i=getValeur(1)
      ^